--- a/apps/hello-web-api/project.json
+++ b/apps/hello-web-api/project.json
@@ -5,5 +5,27 @@
   "sourceRoot": "apps/hello-web-api",
   "tags": [],
   "targets": {
+    "build": {
+      "executor": "@nx-dotnet/core:build",
+      "outputs": ["{workspaceRoot}/dist/apps/{projectRoot}"],
+      "options": {
+        "configuration": "Debug",
+        "noDependencies": false,
+        "selfContained": false,
+        "noBuild": false,
+        "noRestore": false
+      }
+    },
+    "publish": {
+      "executor": "@nx-dotnet/core:publish",
+      "outputs": ["{workspaceRoot}/dist/apps/{projectRoot}"],
+      "options": {
+        "configuration": "Release",
+        "noDependencies": false,
+        "selfContained": false,
+        "noBuild": false,
+        "noRestore": false
+      }
+    }
   }
 }
