--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,4 +37,10 @@ jobs:
       # Prepend any command with "nx-cloud record --" to record its logs to Nx Cloud
       # - run: yarn nx-cloud record -- echo Hello World
       # Nx Affected runs only tasks affected by the changes in this PR/commit. Learn more: https://nx.dev/ci/features/affected
-      - run: yarn nx affected -t lint test build
+      - run: yarn nx affected -t build
+
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: packages
+          path: ./dist/apps  # or ./dist — adjust to your build folder
