--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,8 +39,14 @@ jobs:
       # Nx Affected runs only tasks affected by the changes in this PR/commit. Learn more: https://nx.dev/ci/features/affected
       - run: yarn nx affected -t build
 
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v4
+      - name: Azure Login
+        uses: azure/login@v1
         with:
-          name: packages
-          path: ./dist/apps  # or ./dist — adjust to your build folder
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: 'az204-compute-appservices-web-app'
+          slot-name: 'production'
+          package: './dist/apps/hello-nestjs'
