--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,7 +34,7 @@ jobs:
       - run: yarn nx affected -t build
 
       - name: Check build output
-        run: cd dist/apps & ls -al .
+        run: ls -al .
 
       - name: Azure Login
         uses: azure/login@v1
@@ -46,4 +46,4 @@ jobs:
         with:
           app-name: 'az204-compute-appservices-web-app'
           slot-name: 'production'
-          package: '/dist/apps/hello-nestjs'
+          package: './dist/apps/hello-nestjs'
