--- a/apps/hello-nestjs/package.json
+++ b/apps/hello-nestjs/package.json
@@ -1,51 +1,5 @@
 {
   "name": "@hello/hello-nestjs",
   "version": "0.0.1",
-  "private": true,
-  "nx": {
-    "targets": {
-      "build": {
-        "executor": "nx:run-commands",
-        "options": {
-          "command": "webpack-cli build",
-          "args": [
-            "node-env=production"
-          ]
-        },
-        "configurations": {
-          "development": {
-            "args": [
-              "node-env=development"
-            ]
-          }
-        }
-      },
-      "serve": {
-        "continuous": true,
-        "executor": "@nx/js:node",
-        "defaultConfiguration": "development",
-        "dependsOn": [
-          "build"
-        ],
-        "options": {
-          "buildTarget": "@hello/hello-nestjs:build",
-          "runBuildTargetDependencies": false
-        },
-        "configurations": {
-          "development": {
-            "buildTarget": "@hello/hello-nestjs:build:development"
-          },
-          "production": {
-            "buildTarget": "@hello/hello-nestjs:build:production"
-          }
-        }
-      },
-      "docker-build": {
-        "dependsOn": [
-          "build"
-        ],
-        "command": "docker build -f apps/hello-nestjs/Dockerfile . -t @hello/hello-nestjs"
-      }
-    }
-  }
+  "private": true
 }
