--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,14 +34,11 @@ jobs:
       #- run: yarn nx affected -t build
       - run: yarn nx build hello-nestjs
 
-      - name: Zip artifact for deployment
-        run: zip apps.zip ./dest/* -r
-
-      - name: Upload artifact for deployment job
+      - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: packages
-          path: apps.zip
+          path: ./dist/apps  # or ./dist — adjust to your build folder
 
   deploy:
     runs-on: ubuntu-latest
@@ -55,13 +52,11 @@ jobs:
       contents: read #This is required for actions/checkout
 
     steps:
-      - name: Download artifact from build job
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: packages
-
-      - name: Unzip artifact for deployment
-        run: unzip apps.zip
+          path: ./apps
 
       - name: Azure Login
         uses: azure/login@v1
