--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,14 +38,11 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: packages
-          path: ./dist/apps  # or ./dist — adjust to your build folder
+          path: ./dist/apps/hello-nestjs  # or ./dist — adjust to your build folder
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: Production
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -56,7 +53,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: packages
-          path: ./apps
+          path: .
 
       - name: Azure Login
         uses: azure/login@v1
