--- a/apps/hello-nestjs/project.json
+++ b/apps/hello-nestjs/project.json
@@ -7,11 +7,14 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "webpack-cli build",
-        "args": ["node-env=development"]
+        "args": ["node-env=production"]
       },
       "configurations": {
         "development": {
           "args": ["node-env=development"]
+        },
+        "production": {
+          "args": ["node-env=production"]
         }
       }
     },
