--- a/terraform/app-services/ci-cd.yml
+++ b/terraform/app-services/ci-cd.yml
@@ -32,30 +32,35 @@ jobs:
       # - run: yarn nx-cloud record -- echo Hello World
       # Nx Affected runs only tasks affected by the changes in this PR/commit. Learn more: https://nx.dev/ci/features/affected
       #- run: yarn nx affected -t build
-      - run: yarn nx affected -t build
+      - run: yarn nx build hello-nestjs
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: apps
-          path: ./dist/apps  # or ./dist — adjust to your build folder
+          name: packages
+          path: ./dist/apps/hello-nestjs  # or ./dist — adjust to your build folder
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
 
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: apps
+          name: packages
           path: .
 
       - name: Azure Login
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: 'az204-compute-appservices-web-app'
+          slot-name: 'production'
+          package: .
+
