--- a/.github/workflows/azure-func.yml
+++ b/.github/workflows/azure-func.yml
@@ -1,4 +1,4 @@
-name: Build & Deploy Azure Function App
+name: azure func
 
 on:
   push:
@@ -61,6 +61,7 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Deploy to Azure Function App
+        id: fa
         uses: azure/functions-action@v1
         with:
           app-name: 'az204-compute-function-app-func'
