--- a/.github/workflows/app-services.yml
+++ b/.github/workflows/app-services.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: packages
+          name: hello-nestjs
           path: ./dist/apps/hello-nestjs  # or ./dist — adjust to your build folder
 
   deploy:
@@ -48,7 +48,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: packages
+          name: hello-nestjs
           path: .
 
       - name: Azure Login
@@ -64,7 +64,8 @@ jobs:
           slot-name: 'production'
           package: .
 
-      - uses: geekyeggo/delete-artifact@v5
+      - name: Delete artifact
+        uses: geekyeggo/delete-artifact@v5
         with:
-          name: packages
+          name: hello-nestjs
 
