--- a/.github/workflows/azure-functions.yml
+++ b/.github/workflows/azure-functions.yml
@@ -34,6 +34,8 @@ jobs:
       #- run: yarn nx affected -t build
       - run: yarn nx publish hello-func
 
+      - run: cd dist/apps/hello-func/net8.0/publish && ls
+
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
@@ -54,6 +56,8 @@ jobs:
         with:
           name: hello-func
           path: .
+
+      - run: ls
 
       - name: Azure Login
         uses: azure/login@v1
