--- a/.github/workflows/azure-functions.yml
+++ b/.github/workflows/azure-functions.yml
@@ -34,13 +34,15 @@ jobs:
       #- run: yarn nx affected -t build
       - run: yarn nx publish hello-func
 
-      - run: cd dist/apps/hello-func/net8.0/publish && ls
+      - run: cd dist/apps/hello-func/net8.0/publish && ls -la
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: hello-func
-          path: ./dist/apps/hello-func/net8.0/publish  # or ./dist — adjust to your build folder
+          path:
+            ./dist/apps/hello-func/net8.0/publish
+            ./dist/apps/hello-func/net8.0/publish/**/*
 
   deploy:
     runs-on: ubuntu-latest
@@ -56,8 +58,6 @@ jobs:
         with:
           name: hello-func
           path: .
-
-      - run: ls
 
       - name: Azure Login
         uses: azure/login@v1
