--- a/.github/workflows/azure-functions.yml
+++ b/.github/workflows/azure-functions.yml
@@ -28,20 +28,15 @@ jobs:
       - run: yarn install --frozen-lockfile
       - uses: nrwl/nx-set-shas@v4
 
-      # Prepend any command with "nx-cloud record --" to record its logs to Nx Cloud
-      # - run: yarn nx-cloud record -- echo Hello World
-      # Nx Affected runs only tasks affected by the changes in this PR/commit. Learn more: https://nx.dev/ci/features/affected
-      #- run: yarn nx affected -t build
+      - run: yarn nx affected -t build
       - run: yarn nx publish hello-func
-
-      - run: cd dist/apps/hello-func/net8.0/publish && ls -la
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: hello-func
-          path:
-            ./dist/apps/hello-func/net8.0/publish
+          path: |
+            ./dist/apps/hello-func/net8.0/publish/
             ./dist/apps/hello-func/net8.0/publish/**/*
 
   deploy:
