--- a/.github/workflows/azure-functions.yml
+++ b/.github/workflows/azure-functions.yml
@@ -34,13 +34,13 @@ jobs:
       - name: Create deployment package
         run: |
           cd dist/apps/hello-func/net8.0/publish
-          zip -r hello-func.zip .
+          zip -r packages.zip .
 
-      - name: Upload build artifact
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: hello-func
-          path: ./hello-func.zip
+          path: packages.zip
 
   deploy:
     runs-on: ubuntu-latest
