--- a/.github/workflows/azure-functions.yml
+++ b/.github/workflows/azure-functions.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: hello-func
-          path: packages.zip
+          path: dist/apps/hello-func/net8.0/publish/packages.zip
 
   deploy:
     runs-on: ubuntu-latest
