--- a/.github/workflows/azure-functions.yml
+++ b/.github/workflows/azure-functions.yml
@@ -68,7 +68,7 @@ jobs:
         with:
           app-name: 'az204-compute-function-app-func'
           slot-name: 'production'
-          package: .
+          package: packages.zip
 
       - name: Delete artifact
         uses: geekyeggo/delete-artifact@v5
